assets/scss/mesh/_structure.scss
/**
 *
 * 01. Global
 * 02. No Sections
 * 03. Section Header
 * 04. Section Meta
 * 05. Section Footer
 * 06. Blocks
 *
 **/


// 01. Global
#mesh-container {

  margin-bottom: $base * 2;

  .postbox.closed {
	.handle-title:after {
	  visibility:hidden;
	}
  }

  .postbox:last-child {
	margin-bottom: 2px;
  }

  .postbox .hndle {
	border: none;
  }
}

.wrap .notice.mesh-main-ua-row {
	padding: {
		bottom: 10px;
		top: 10px;
	};

    margin : 10px 0 4px;

    &.bottom {
    	margin-top: 4px;
    }

	.lead {
		margin: 0;
	}

	&.notice {
		p {
			height: $input_height;
			line-height: $input_height;
			margin: 0;
			padding: 0;
		}
	}
}

.mesh-clean-edit {
	margin-left: 5px;
	position: relative;

	.mesh-clean-edit-element,
	input {
		opacity: 0;
		visibility: hidden;
		width: auto;

		transition: $global_timing opacity $global_easing;
	}

	input {
		margin: {
			bottom: $base * .25;
			top: $base * .25;
		};
	}

	span {
		cursor: pointer;
	}

	.handle-title {
		-moz-box-sizing: border-box;
	    box-sizing: border-box;
	    height: 32px;
	    line-height: 32px - ($input_padding_y * 2);
	    padding: $input_padding_y $input_padding_x;

	    opacity: 1;
	    visibility: visible;

		position: absolute;
	    top: 0;
	    left: 0;

	    @include dashicons( '\f464', 'after' );

	    transition: $global_timing opacity $global_easing;

	    &:after {
		    color: $primary;
		    margin-left: $input_padding_x;
	    }
	}

	.close-title-edit {
		display: none;

		color: $primary;
		height: 32px;
	    line-height: 32px;
		padding: {
			left: $input_padding_x;
			right: $input_padding_x;
		};
	}

	&.title-input-visible {
		.mesh-clean-edit-element {
			opacity: 1;
			visibility: visible;
		}

		input.mesh-clean-edit-element {
			width: 90%;
			width: calc(100% - 100px);
		}

		.handle-title {
			opacity: 0;
			visibility: hidden;
		}

		.close-title-edit {
			display: inline-block;
		}
	}

	&.handle-right {
		margin: {
			left: 0;
			right: 5px;
		};

		.handle-title {
			left: auto;
			right: 0;
		}
	}
}

.mesh-columns-12 + .mesh-columns-12 {
	margin-top: $base;
}

.mesh-section-expand {
	@include dashicons( '\f164' );
}

.mesh-section-collapse {
	@include dashicons( '\f163' );
}

.mesh-section-reorder {
	@include dashicons( '\f156' );
}

.mesh-section-expand,
.mesh-section-collapse,
.mesh-section-reorder {
	&:before {
		font-size: 18px;
		margin-right: 4px;
	}
}

.mesh-admin-title {
	font: {
		size: 15px;
		weight: 600;
	};
}

// 02. No Sections
#mesh-description {
	padding: {
		bottom: $base * 2;
		top: $base * 2;
	};
}


// 03. Section Header
.mesh-section {
	.handlediv {
		cursor: pointer;
		font-size: 20px;
		height: $input_height;
		line-height: $input_height;
		width: 26px;

		position: absolute;
		right: 12px;
		top: 8px;

		@include dashicons( '\f142' );
	}

	&.ui-sortable-handle {
		cursor: move;
	}

	&.closed .handlediv {
		@include dashicons( '\f140' );
	}

	&.ui-sortable-placeholder {
		background-color: transparent;
		border: 2px dashed $dark-grey;
		visibility: visible !important;
	}

	.notice {
		background-color: $light-grey;
		box-shadow: none;
	}
}

.mesh-row-padding {
	padding: 8px 50px 8px 12px;
}

.mesh-title-row {
  border-bottom: 1px solid #f2f2f2;
  padding: 4px 40px 4px 4px;
}

// 04. Section Meta
.mesh-section-meta,
.mesh-section-meta-dropdown {
	margin: {
		left: -$inside_padding;
		right: -$inside_padding;
	};
}

.mesh-section-meta {
	border-bottom: 1px solid $grey;
	position: relative;
    background-color: $super-light-grey;
}

.slide-toggle-meta-dropdown {
	background-color: $light-grey;
	border: 1px solid $grey;
	border-bottom: none;
	color: $darkest-grey;
	line-height: $base;
	padding: $base * .5;
	text-decoration: none;

	position: absolute;
	right: $base * .75;
	bottom: -1px;

	@include dashicons( '\f140', 'after' );

	&:after {
		font-size: 20px;
	}

	&:active {
		outline: none;
	}

	&.toggled {
		@include dashicons( '\f142', 'after' );
	}
}

.mesh-section-meta-dropdown {
	background-color: $light-grey;
	border-bottom: 1px solid $grey;
	padding: $base;

	.mesh-table {
		display: table;
		height: 80px;
	}

	.mesh-table-footer {
		display: table-footer-group;
	}
}

.mesh-section-background {
	.choose-image {
		height: 80px;
		position: relative;

		img {
			height: 80px;
			width: auto;
		}

		.mesh-featured-image-trash,
		.mesh-block-featured-image-trash {
			text-decoration: none;

			position: absolute;
			right: 0;
			top: 0;
		}
	}

	.mesh-featured-image-choose {
		height: inherit;
		line-height: 80px;
	}
}

// 05. Section Footer
.mesh-section-footer {
	background-color: $light-grey;
	border-top: 1px solid $grey;
	margin: {
		left: -$inside_padding;
		right: -$inside_padding;
		bottom: -$inside_padding;
	};
	padding: $inside_padding;

	.mesh-section-remove {
		line-height: $input_height;

		&:before {
			line-height: $input_height;
		}
	}
}

// 06. Blocks

.mesh-editor-blocks {
	.block {
	  .mesh-has-offset {
		.wp-media-buttons {
			margin-left:0;
		}
		.wp-editor-container {
		  border-left:1px solid #e5e5e5;
	  }
	}
  }
}

.mesh-editor-blocks {
	margin: {
		bottom: 6px;
		top: 6px;
	};
	position: relative;

	.mesh-block-options-toggle-container {
		background-color: $light-grey;
		border-bottom: 1px solid $grey;
		position: relative;
	}

	.block {
		border: 1px solid $grey;
	    background: #fcfcfc;

	    .wp-editor-wrap {
		  padding-top:6px;
		}

		.wp-editor-container {
			border: {
				left: none;
				right: none;
				bottom: none;
			};
		}

		.slide-toggle-meta-dropdown {
			border: {
				right: none;
				top: none;
			};

			right: 0;
			top: 0;
		}

		.wp-media-buttons {
			margin-left: $base * .25;
		}
	}

	.mesh-block-meta-dropdown {
		background-color: $light-grey;
		margin-top: 0;
		padding: .75rem;
	}

	.mesh-columns-3,
	.mesh-columns-4 {
		.mesh-block-meta-dropdown{
			.left {
				width: 100%;
				margin-bottom: 1em;

				label {
					display: block;

					input {
						display: block;
						max-width: 100%;
					}
				}
			}

			.right {
				width: 100%;
			}
		}
	}

	.column-slider {
		position: absolute;
	    left: 0px;
	    right: 0px;
	    top: 0px;
	    height: auto;
	    bottom: 0px;
	    border: none;

	    &[data-mesh-blocks="2"] {
		    ~ .mesh-section-block {
			    &:nth-of-type(2) {
				    padding-right: $block_padding * 1.8;
			    }

			    &:nth-of-type(3) {
				    padding-left: $block_padding * 1.8;
			    }
		    }
	    }

	    &[data-mesh-blocks="3"] {
		    .ui-slider-handle {
			    &:nth-of-type(1) {
				    margin-left: -15px;
			    }

			    &:nth-of-type(2) {
				    margin-left: -11px;
			    }
		    }

		    ~ .mesh-section-block {
			    &:nth-of-type(2) {
				    padding-right: 20px;
			    }

			    &:nth-of-type(3) {
				    padding-left: 16px;
				    padding-right: 16px
			    }

			    &:nth-of-type(4) {
				    padding-left: 20px;
			    }
			}
	    }
	}

	> .mesh-row {
		margin: 0 (-$base);
	}

	.columns {
		padding: 0 $block_padding;
		position: relative;
		z-index: 11;
	}

    .mesh-columns-12.columns {
	    padding: 0 9px;
	}

	.wp-slider .ui-slider-handle {
		border-radius: 0;
		box-shadow: none;
		box-sizing: border-box;
		cursor: ew-resize;
		height: auto;
		margin-left: -($base * 2 - 6px)/2;
		width: $base * 2 - 6px;

		top: 5px;
		bottom: 0;
		z-index: 12;

		&:before {
			background-color: $primary;
			border-radius: 50%;
			color: white;
			line-height: $base * 2 - 12px;
			height: $base * 2 - 12px;
			width: $base * 2 - 12px;
			text-align: center;

			top: 50%;
			margin-top: ( $base * 2 - 12px )/2;
		}
	}

	// Sortable Columns
	.ui-sortable {
		.ui-sortable-helper .drop-target {
			background-color: white;
		}

		.ui-sortable-placeholder {
			padding: {
				left: 16px;
				right: 16px;
			};
			visibility: visible !important;

			&:before {
				content: '';

				border: 2px dashed $grey;

				position: absolute;
				left: 16px;
				right: 16px;
				top: 0;
				bottom: 0;
			}
		}
	}
}

.mesh-block-title-row {
	margin-bottom: 0;
}

.mesh-columns-12 .mesh-block-title-row {
  background-color: #f5f5f5;
  border-bottom: 1px solid #dedede;
  position: relative;
  padding: 4px 4px 0 0;
}

.block-content {
	&.mesh-has-offset {
		position: relative;

		&:before {
			content: '';

			background: {
				color: $light-grey;
				image: url('../images/offset-pattern.png');
			};
			margin-right: 10px;

			position: absolute;
			left: 0;
			bottom: 0;
			top: 0;
		}
	}
}

.the-mover {
	background: $light-grey;
	height: $base * 2;
	width: $base * 1.5;

	position: relative;

	&:before,
	&:after {
		content: '';

		background: mix($dark-grey, $darkest-grey);
		width: 2px;

		position: absolute;
		top: 4px;
		bottom: 4px;
	}

	&:before {
		left: 5px;
	}

	&:after {
		right: 5px;
	}

	span {
		background: mix($dark-grey, $darkest-grey);
		margin-left: -1px;
		width: 2px;

		position: absolute;
		top: 4px;
		bottom: 4px;
		left: 50%;
	}
}

#poststuff .mesh-section .inside {
  margin-top:0;
}

/*#mesh-container {
	.spinner {
		margin: 0px 10px 0;
	}

	.dashicons-before:before {
		line-height: inherit;
	}
}

.mesh-row {
	.block {
		background-color: white;
	}

	.ui-draggable-dragging {
		z-index: 10000;
	}

	.drop-target {
		&.ui-state-hover {
			border: 2px dashed $grey;
		}

		&.ui-state-active {
			border-color: $dark-grey;
		}

		.hndle {
			cursor: default;
		}
	}
}

.mesh-row-title {
	background-color: $light-grey;
	cursor: move;
	margin: -5px -5px 5px -5px;
	padding: 5px;
}

.mesh-section-controls-container,
.mesh-section-remove-container {
	.spinner {
		float: none;
	}

	.page-title-action {
		display: inline-block;
		line-height: 30px;
		padding-bottom: 0;
		padding-top: 0;
	}
}

#mesh-container {
	.ui-sortable-handle {
		border-color: $blue;
	}

	.postbox {
		.handlediv:before {
			content: '\f142';

			display: inline-block;
			font: normal 20px/1 'dashicons';
			padding: 8px 10px;
			speak: none;
			text-decoration: none !important;
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;

			position: relative;
			right: 12px;
			top: 0;
		}

		&.closed .handlediv:before {
			content: '\f140';
		}

		&.ui-sortable-handle .handlediv:before {
			content: '\f156';
		}
	}
}

.mesh-editor-blocks {
	overflow: hidden;
	position: relative;

	.wp-editor-area {
		font-family: Consolas, Monaco, monospace;
		font-size: 13px;
	}
}

.mesh-section-meta {
	background-color: $light-grey;
	border: 1px solid $grey;
	line-height: 32px;
	margin: 2px 0;
	padding: 3px 0;

	.dashicons:before,
	.dashicons-before:before {
		font-size: 17px;
		text-decoration: none;
	}
}

#mesh-container {
	.block {
		border: 1px dotted $dark-grey;

		.ui-sortable-handle {
			border-bottom: 1px solid $grey;
		}
	}

	.wp-slider {
		border: none;

		position: absolute;
		right: 0;
		bottom: 50%;
		left: 0;

		.ui-slider-handle {
			height: 16px;
			width: 16px;
			margin-left: -9px;

			&:before {
				font-size: 16px;
				line-height: 18px;
			}
		}
	}
}

.block-header,
.block-content {
	padding: 5px;
}

.block-placeholder {
	border: 1px dotted $grey;
	margin: 0 1em 1em 0;
	min-height: 400px;
}

.text-right {
	text-align : right;
}

.text-left {
	text-align : left;
}

.mesh-block-click {
	background: transparent;
	display: block;

	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 100;
}

.mesh-left {
	float: left;
}

.mesh-right {
	float: right;
}

.mesh-column-offset {
	width:20px;
}*/

